# purjo

./: .buildinfo  .envrc  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  advanced_use_cases.html  cli_reference.html  creating_tasks.html  development_environment.html  devenv.local.nix.example  devenv.nix  devenv.yaml  genindex.html  getting_started.html  handling_variables.html  index.html  library_reference.html  managing_secrets.html  objects.inv  pyproject.toml  release-container.mk  search.html  searchindex.js  testing_tasks.html
.doctrees/: advanced_use_cases.doctree  cli_reference.doctree  creating_tasks.doctree  development_environment.doctree  environment.pickle  getting_started.doctree  handling_variables.doctree  index.doctree  library_reference.doctree  managing_secrets.doctree  testing_tasks.doctree
.github/workflows/: docs.yml  tests.yml
_sources/: advanced_use_cases.md.txt  cli_reference.md.txt  creating_tasks.md.txt  development_environment.md.txt  getting_started.md.txt  handling_variables.md.txt  library_reference.md.txt  managing_secrets.md.txt  testing_tasks.md.txt
agents/: GLOSSARY.md  architecture.md  index.md
agents/adr/: index.md
agents/adrs/: ADR-000-agent-guidance.md  ADR-001-use-uv-for-environment-management.md  ADR-002-use-external-task-pattern.md  ADR-003-architecture-overview.md
agents/stories/: README.md  US-001-serve-robot-packages.md  US-002-configure-engine-url.md  US-003-provide-authorization.md  US-004-configure-secrets.md  US-005-configure-polling-timeout.md  US-006-set-lock-ttl.md  US-007-control-max-jobs.md  US-008-set-worker-id.md  US-009-control-failure-behavior.md  US-010-init-robot-package.md  US-011-init-python-template.md  US-012-wrap-robot-zip.md  US-013-include-offline-deps.md  US-014-deploy-and-start.md  US-015-provide-variables.md  US-016-migrate-instances.md  US-017-force-deployment.md  US-018-create-resources.md  US-019-deploy-resources.md  US-020-start-process.md
devenv/modules/: vscode.nix
docs/: conf.py  creating_tasks.md  development_environment.md  getting_started.md  index.md  testing_tasks.md
examples/: hello_world.py
examples/pdf/: pyproject.toml
fixture/mockoon/: data.json  default.nix  package-lock.json  package.json
scripts/: check-links.py
src/operaton_robot_runner/: main.py  runner.py  task.py
src/operaton_robot_runner/data/: RobotParser.py
src/purjo/: Purjo.py  __init__.py  config.py  datetime_utils.py  deployment.py  exceptions.py  file_utils.py  main.py  migration.py  models.py  runner.py  secrets.py  serialization.py  task.py  utils.py
src/purjo/data/: Makefile  RobotParser.py  hello.robot  hello_task.robot  tasks.py  test_hello.robot  test_hello_task.robot
tests/: conftest.py  factories.py  test_invariants.py  test_smoketest.py
tests/cli/: test_async_functions.py  test_cli_advanced.py  test_cli_basic.py
tests/integration/: test_init.py  test_workflows.py
tests/unit/: test_config.py  test_deployment.py  test_edge_cases.py  test_exceptions.py  test_file_utils.py  test_migration.py  test_purjo_lib.py  test_robot_parser.py  test_runner.py  test_secrets.py  test_task.py  test_utils.py
