[project]
name = "purjo"
version = "1.0b8.dev0"
description = "UV based Robot Framework external service task runner for Operaton"
readme = "README.md"
authors = [
    {name = "Asko Soukka", email = "asko.soukka@iki.fi"},
]
license = {text = "Apache Software License" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]
requires-python = ">= 3.10"
dependencies =[
    "hvac>=2.4.0",
    "javaobj-py3>=0.4.4",
    "operaton-tasks>=1.0.0a6",
    "pathspec>=1.0.3",
    "typer>=0.21.1",
    "tzlocal>=5.3.1",
]

[project.scripts]
pur = "purjo.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/purjo"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "linkify-it-py>=2.0.3",
    "mypy>=1.19.1",
    "myst-parser>=4.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "robotframework>=7.4.1",
    "robotframework-robocop>=7.2.0",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "types-hvac>=2.4.0.20251115",
    "zest-releaser>=9.8.0",
]

[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true
force_single_line = true
from_first = true
line_length = 200
lines_between_types = 0
no_sections = true

[tool.mypy]
exclude = "src/purjo/data"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/purjo",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=json",
    "--cov-fail-under=77",
    "-v",
]
