[project]
name = "purjo"
version = "1.0b8.dev0"
description = "UV based Robot Framework external service task runner for Operaton"
readme = "README.md"
authors = [
    {name = "Asko Soukka", email = "asko.soukka@iki.fi"},
]
license = {text = "Apache Software License" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]
requires-python = ">= 3.9"
dependencies =[
    "typer>=0.15.1",
    "operaton-tasks>=1.0.0a6",
    "javaobj-py3>=0.4.4",
    "tzlocal>=5.2",
    "pathspec>=0.12.1",
    "hvac>=2.3.0",
]

[project.scripts]
pur = "purjo.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/purjo"]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "linkify-it-py>=2.0.3",
    "mypy>=1.13.0",
    "myst-parser>=3.0.1",
    "pytest>=8.3.4",
    "pytest-asyncio~=0.24.0",
    "pytest-cov>=6.0.0",
    "robotframework>=7.4b2",
    "robotframework-tidy>=4.16.0",
    "sphinx>=7.4.7",
    "sphinx-autobuild>=2024.10.3",
    "types-hvac>=2.3.0.20250914",
    "zest-releaser>=9.6.2",
]

[tool.isort]
force_alphabetical_sort_within_sections = true
force_single_line = true
from_first = true
line_length = 200
lines_after_imports = 2
lines_between_types = 0
no_sections = true

[tool.mypy]
exclude = "src/purjo/data"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/purjo",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=json",
    "--cov-fail-under=77",
    "-v",
]
